tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-repeat-statement.wyst
module removed_repeat_statement

fn bad() {
    repeat 3 {}
}
